pynescript-0.2.0/src/pynescript/ast/grammar/antlr4/generated/PinescriptParser.py
# Generated from C:/git/pynescript/src/pynescript/ast/grammar/antlr4/resource/PinescriptParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO

if "." in __name__:
    from .PinescriptParserBase import PinescriptParserBase
else:
    from PinescriptParserBase import PinescriptParserBase


class PinescriptParser ( PinescriptParserBase ):

    grammarFileName = "PinescriptParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'and'", "'as'", 
                     "'break'", "'by'", "'const'", "'continue'", "'else'", 
                     "'export'", "'false'", "'for'", "'if'", "'import'", 
                     "'in'", "'input'", "'method'", "'not'", "'or'", "'series'", 
                     "'simple'", "'switch'", "'to'", "'type'", "'true'", 
                     "'var'", "'varip'", "'while'", "'('", "')'", "'['", 
                     "']'", "'<'", "'>'", "'='", "'=='", "'!='", "'<='", 
                     "'>='", "'=>'", "'.'", "','", "':'", "'?'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'+='", "'-='", "'*='", 
                     "'/='", "'%='", "':='" ]

    symbolicNames = [ "<INVALID>", "INDENT", "DEDENT", "AND", "AS", "BREAK", 
                      "BY", "CONST", "CONTINUE", "ELSE", "EXPORT", "FALSE", 
                      "FOR", "IF", "IMPORT", "IN", "INPUT", "METHOD", "NOT", 
                      "OR", "SERIES", "SIMPLE", "SWITCH", "TO", "TYPE", 
                      "TRUE", "VAR", "VARIP", "WHILE", "LPAR", "RPAR", "LSQB", 
                      "RSQB", "LESS", "GREATER", "EQUAL", "EQEQUAL", "NOTEQUAL", 
                      "LESSEQUAL", "GREATEREQUAL", "RARROW", "DOT", "COMMA", 
                      "COLON", "QUESTION", "PLUS", "MINUS", "STAR", "SLASH", 
                      "PERCENT", "PLUSEQUAL", "MINEQUAL", "STAREQUAL", "SLASHEQUAL", 
                      "PERCENTEQUAL", "COLONEQUAL", "NAME", "NUMBER", "STRING", 
                      "COLOR", "NEWLINE", "WS", "COMMENT", "ERROR_TOKEN" ]

    RULE_start = 0
    RULE_start_script = 1
    RULE_start_expression = 2
    RULE_start_comments = 3
    RULE_statements = 4
    RULE_statement = 5
    RULE_compound_statement = 6
    RULE_simple_statements = 7
    RULE_simple_statement = 8
    RULE_compound_assignment = 9
    RULE_compound_variable_initialization = 10
    RULE_compound_name_initialization = 11
    RULE_compound_tuple_initialization = 12
    RULE_compound_reassignment = 13
    RULE_compound_augassignment = 14
    RULE_function_declaration = 15
    RULE_parameter_list = 16
    RULE_parameter_definition = 17
    RULE_type_declaration = 18
    RULE_field_definitions = 19
    RULE_field_definition = 20
    RULE_structure = 21
    RULE_structure_statement = 22
    RULE_structure_expression = 23
    RULE_if_structure = 24
    RULE_if_structure_elif = 25
    RULE_if_structure_else = 26
    RULE_elif_structure = 27
    RULE_elif_structure_elif = 28
    RULE_elif_structure_else = 29
    RULE_else_block = 30
    RULE_for_structure = 31
    RULE_for_structure_to = 32
    RULE_for_structure_in = 33
    RULE_for_iterator = 34
    RULE_while_structure = 35
    RULE_switch_structure = 36
    RULE_switch_cases = 37
    RULE_switch_pattern_case = 38
    RULE_switch_default_case = 39
    RULE_local_block = 40
    RULE_indented_local_block = 41
    RULE_inline_local_block = 42
    RULE_simple_assignment = 43
    RULE_simple_variable_initialization = 44
    RULE_simple_name_initialization = 45
    RULE_simple_tuple_initialization = 46
    RULE_simple_reassignment = 47
    RULE_simple_augassignment = 48
    RULE_expression = 49
    RULE_expression_statement = 50
    RULE_conditional_expression = 51
    RULE_conditional_expression_rule = 52
    RULE_disjunction_expression = 53
    RULE_disjunction_expression_rule = 54
    RULE_conjunction_expression = 55
    RULE_conjunction_expression_rule = 56
    RULE_equality_expression = 57
    RULE_equality_expression_rule = 58
    RULE_equality_trailing_pair = 59
    RULE_equal_trailing_pair = 60
    RULE_not_equal_trailing_pair = 61
    RULE_inequality_expression = 62
    RULE_inequality_expression_rule = 63
    RULE_inequality_trailing_pair = 64
    RULE_less_than_equal_trailing_pair = 65
    RULE_less_than_trailing_pair = 66
    RULE_greater_than_equal_trailing_pair = 67
    RULE_greater_than_trailing_pair = 68
    RULE_additive_expression = 69
    RULE_additive_op = 70
    RULE_multiplicative_expression = 71
    RULE_multiplicative_op = 72
    RULE_unary_expression = 73
    RULE_unary_op = 74
    RULE_primary_expression = 75
    RULE_argument_list = 76
    RULE_argument_definition = 77
    RULE_subscript_slice = 78
    RULE_atomic_expression = 79
    RULE_literal_expression = 80
    RULE_literal_number = 81
    RULE_literal_string = 82
    RULE_literal_bool = 83
    RULE_literal_color = 84
    RULE_grouped_expression = 85
    RULE_tuple_expression = 86
    RULE_import_statement = 87
    RULE_break_statement = 88
    RULE_continue_statement = 89
    RULE_variable_declaration = 90
    RULE_tuple_declaration = 91
    RULE_declaration_mode = 92
    RULE_assignment_target = 93
    RULE_assignment_target_attribute = 94
    RULE_assignment_target_subscript = 95
    RULE_assignment_target_name = 96
    RULE_assignment_target_group = 97
    RULE_augassign_op = 98
    RULE_type_specification = 99
    RULE_type_qualifier = 100
    RULE_attributed_type_name = 101
    RULE_template_spec_suffix = 102
    RULE_array_type_suffix = 103
    RULE_type_argument_list = 104
    RULE_name = 105
    RULE_name_load = 106
    RULE_name_store = 107
    RULE_comments = 108
    RULE_comment = 109

    ruleNames =  [ "start", "start_script", "start_expression", "start_comments", 
                   "statements", "statement", "compound_statement", "simple_statements", 
                   "simple_statement", "compound_assignment", "compound_variable_initialization", 
                   "compound_name_initialization", "compound_tuple_initialization", 
                   "compound_reassignment", "compound_augassignment", "function_declaration", 
                   "parameter_list", "parameter_definition", "type_declaration", 
                   "field_definitions", "field_definition", "structure", 
                   "structure_statement", "structure_expression", "if_structure", 
                   "if_structure_elif", "if_structure_else", "elif_structure", 
                   "elif_structure_elif", "elif_structure_else", "else_block", 
                   "for_structure", "for_structure_to", "for_structure_in", 
                   "for_iterator", "while_structure", "switch_structure", 
                   "switch_cases", "switch_pattern_case", "switch_default_case", 
                   "local_block", "indented_local_block", "inline_local_block", 
                   "simple_assignment", "simple_variable_initialization", 
                   "simple_name_initialization", "simple_tuple_initialization", 
                   "simple_reassignment", "simple_augassignment", "expression", 
                   "expression_statement", "conditional_expression", "conditional_expression_rule", 
                   "disjunction_expression", "disjunction_expression_rule", 
                   "conjunction_expression", "conjunction_expression_rule", 
                   "equality_expression", "equality_expression_rule", "equality_trailing_pair", 
                   "equal_trailing_pair", "not_equal_trailing_pair", "inequality_expression", 
                   "inequality_expression_rule", "inequality_trailing_pair", 
                   "less_than_equal_trailing_pair", "less_than_trailing_pair", 
                   "greater_than_equal_trailing_pair", "greater_than_trailing_pair", 
                   "additive_expression", "additive_op", "multiplicative_expression", 
                   "multiplicative_op", "unary_expression", "unary_op", 
                   "primary_expression", "argument_list", "argument_definition", 
                   "subscript_slice", "atomic_expression", "literal_expression", 
                   "literal_number", "literal_string", "literal_bool", "literal_color", 
                   "grouped_expression", "tuple_expression", "import_statement", 
                   "break_statement", "continue_statement", "variable_declaration", 
                   "tuple_declaration", "declaration_mode", "assignment_target", 
                   "assignment_target_attribute", "assignment_target_subscript", 
                   "assignment_target_name", "assignment_target_group", 
                   "augassign_op", "type_specification", "type_qualifier", 
                   "attributed_type_name", "template_spec_suffix", "array_type_suffix", 
                   "type_argument_list", "name", "name_load", "name_store", 
                   "comments", "comment" ]

    EOF = Token.EOF
    INDENT=1
    DEDENT=2
    AND=3
    AS=4
    BREAK=5
    BY=6
    CONST=7
    CONTINUE=8
    ELSE=9
    EXPORT=10
    FALSE=11
    FOR=12
    IF=13
    IMPORT=14
    IN=15
    INPUT=16
    METHOD=17
    NOT=18
    OR=19
    SERIES=20
    SIMPLE=21
    SWITCH=22
    TO=23
    TYPE=24
    TRUE=25
    VAR=26
    VARIP=27
    WHILE=28
    LPAR=29
    RPAR=30
    LSQB=31
    RSQB=32
    LESS=33
    GREATER=34
    EQUAL=35
    EQEQUAL=36
    NOTEQUAL=37
    LESSEQUAL=38
    GREATEREQUAL=39
    RARROW=40
    DOT=41
    COMMA=42
    COLON=43
    QUESTION=44
    PLUS=45
    MINUS=46
    STAR=47
    SLASH=48
    PERCENT=49
    PLUSEQUAL=50
    MINEQUAL=51
    STAREQUAL=52
    SLASHEQUAL=53
    PERCENTEQUAL=54
    COLONEQUAL=55
    NAME=56
    NUMBER=57
    STRING=58
    COLOR=59
    NEWLINE=60
    WS=61
    COMMENT=62
    ERROR_TOKEN=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def start_script(self):
            return self.getTypedRuleContext(PinescriptParser.Start_scriptContext,0)


        def getRuleIndex(self):
            return PinescriptParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = PinescriptParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 220
            self.start_script()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Start_scriptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PinescriptParser.EOF, 0)

        def statements(self):
            return self.getTypedRuleContext(PinescriptParser.StatementsContext,0)


        def getRuleIndex(self):
            return PinescriptParser.RULE_start_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart_script" ):
                listener.enterStart_script(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart_script" ):
                listener.exitStart_script(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart_script" ):
                return visitor.visitStart_script(self)
            else:
                return visitor.visitChildren(self)




    def start_script(self):

        localctx = PinescriptParser.Start_scriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_start_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 223
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1080969466897464736) != 0):
                self.state = 222
                self.statements()


            self.state = 225
            self.match(PinescriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Start_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(PinescriptParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(PinescriptParser.EOF, 0)

        def NEWLINE(self):
            return self.getToken(PinescriptParser.NEWLINE, 0)

        def getRuleIndex(self):
            return PinescriptParser.RULE_start_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart_expression" ):
                listener.enterStart_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart_expression" ):
                listener.exitStart_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart_expression" ):
                return visitor.visitStart_expression(self)
            else:
                return visitor.visitChildren(self)




    def start_expression(self):

        localctx = PinescriptParser.Start_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_start_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 227
            self.expression()
            self.state = 229
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==60:
                self.state = 228
                self.match(PinescriptParser.NEWLINE)


            self.state = 231
            self.match(PinescriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Start_commentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PinescriptParser.EOF, 0)

        def comments(self):
            return self.getTypedRuleContext(PinescriptParser.CommentsContext,0)


        def getRuleIndex(self):
            return PinescriptParser.RULE_start_comments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart_comments" ):
                listener.enterStart_comments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart_comments" ):
                listener.exitStart_comments(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart_comments" ):
                return visitor.visitStart_comments(self)
            else:
                return visitor.visitChildren(self)




    def start_comments(self):

        localctx = PinescriptParser.Start_commentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_start_comments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 234
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==62:
                self.state = 233
                self.comments()


            self.state = 236
            self.match(PinescriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PinescriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(PinescriptParser.StatementContext,i)


        def getRuleIndex(self):
            return PinescriptParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = PinescriptParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 239 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 238
                self.statement()
                self.state = 241 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1080969466897464736) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compound_statement(self):
            return self.getTypedRuleContext(PinescriptParser.Compound_statementContext,0)


        def simple_statements(self):
            return self.getTypedRuleContext(PinescriptParser.Simple_statementsContext,0)


        def getRuleIndex(self):
            return PinescriptParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = PinescriptParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        try:
            self.state = 245
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 243
                self.compound_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 244
                self.simple_statements()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compound_assignment(self):
            return self.getTypedRuleContext(PinescriptParser.Compound_assignmentContext,0)


        def function_declaration(self):
            return self.getTypedRuleContext(PinescriptParser.Function_declarationContext,0)


        def type_declaration(self):
            return self.getTypedRuleContext(PinescriptParser.Type_declarationContext,0)


        def structure_statement(self):
            return self.getTypedRuleContext(PinescriptParser.Structure_statementContext,0)


        def getRuleIndex(self):
            return PinescriptParser.RULE_compound_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_statement" ):
                listener.enterCompound_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_statement" ):
                listener.exitCompound_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_statement" ):
                return visitor.visitCompound_statement(self)
            else:
                return visitor.visitChildren(self)




    def compound_statement(self):

        localctx = PinescriptParser.Compound_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_compound_statement)
        try:
            self.state = 251
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 247
                self.compound_assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 248
                self.function_declaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 249
                self.type_declaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 250
                self.structure_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_statementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PinescriptParser.Simple_statementContext)
            else:
                return self.getTypedRuleContext(PinescriptParser.Simple_statementContext,i)


        def NEWLINE(self):
            return self.getToken(PinescriptParser.NEWLINE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PinescriptParser.COMMA)
            else:
                return self.getToken(PinescriptParser.COMMA, i)

        def getRuleIndex(self):
            return PinescriptParser.RULE_simple_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_statements" ):
                listener.enterSimple_statements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_statements" ):
                listener.exitSimple_statements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_statements" ):
                return visitor.visitSimple_statements(self)
            else:
                return visitor.visitChildren(self)




    def simple_statements(self):

        localctx = PinescriptParser.Simple_statementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_simple_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 253
            self.simple_statement()
            self.state = 258
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 254
                    self.match(PinescriptParser.COMMA)
                    self.state = 255
                    self.simple_statement() 
                self.state = 260
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 262
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==42:
                self.state = 261
                self.match(PinescriptParser.COMMA)


            self.state = 264
            self.match(PinescriptParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_assignment(self):
            return self.getTypedRuleContext(PinescriptParser.Simple_assignmentContext,0)


        def expression_statement(self):
            return self.getTypedRuleContext(PinescriptParser.Expression_statementContext,0)


        def import_statement(self):
            return self.getTypedRuleContext(PinescriptParser.Import_statementContext,0)


        def break_statement(self):
            return self.getTypedRuleContext(PinescriptParser.Break_statementContext,0)


        def continue_statement(self):
            return self.getTypedRuleContext(PinescriptParser.Continue_statementContext,0)


        def getRuleIndex(self):
            return PinescriptParser.RULE_simple_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_statement" ):
                listener.enterSimple_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_statement" ):
                listener.exitSimple_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_statement" ):
                return visitor.visitSimple_statement(self)
            else:
                return visitor.visitChildren(self)




    def simple_statement(self):

